#650 replaced usage of setex command with set command and options